# algo-trading-system

./: .gitattributes  .gitignore  FINAL_REPO_REVIEW_AFTER_UPDATED_PUSH_2026_05_23.md  FINAL_REPO_REVIEW_REVIEW6_2026_05_23.md  README.md  REPO_REVIEW_4_FINDINGS.md  REPO_REVIEW_5_FINDINGS.md  REPO_REVIEW_6_FINDINGS.md  agent.md  status.html
xau-usd/xauusd-phase0/: .gitignore  CODEX_IMPLEMENTATION_SPEC.md  README.md  pyproject.toml  requirements.txt
xau-usd/xauusd-phase0/config/: broker_sources.yaml  cost_models.yaml  logging.yaml  phase0.yaml  symbols.yaml  true_holdout_period.yaml
xau-usd/xauusd-phase0/data/: README_DATA.md
xau-usd/xauusd-phase0/docs/: ADVERSE_REVIEW_GUIDE.md  ASIA_RANGE_LONDON_BREAKOUT_V0_FIRST_PASS.md  ASIA_RANGE_LONDON_FAILED_BREAK_REVERSAL_V0_FIRST_PASS.md  CANDIDATE_RESEARCH_BACKLOG.md  COMPRESSION_RETEST_CONTINUATION_V0_FIRST_PASS.md  COST_REPORTING_POLICY.md  COT_GOLD_POSITIONING_REVERSAL_V0_FIRST_PASS.md  D1_COMPRESSION_H4_EXPANSION_V0_FIRST_PASS.md  D1_INSIDE_DAY_BREAKOUT_V0_FIRST_PASS.md  D1_MOMENTUM_H4_PULLBACK_V0_FIRST_PASS.md  D1_MULTI_DAY_EXHAUSTION_REVERSION_V0_FIRST_PASS.md  D1_OUTSIDE_DAY_FOLLOWTHROUGH_V0_FIRST_PASS.md  D1_VOLATILITY_EXPANSION_REVERSAL_V0_FIRST_PASS.md  D1_W1_MOMENTUM_H4_PULLBACK_V0_FIRST_PASS.md  D2_METHOD_DECISION_2026_05_27.md  D2_REALITY_CHECK_RESOLUTION_PLAN.md  DAILY_PIVOT_RECLAIM_V0_FIRST_PASS.md  DATA_CONTRACTS.md  DIVERSIFICATION_AVAILABILITY_FINDING.md  EMR_INACTIVITY_LONG_V0_FIRST_PASS.md  EXTREME_ACTIVITY_MEAN_REVERSION_V0_FIRST_PASS.md  GOLD_FX_PROXY_DIVERGENCE_V0_BLOCKER_FIX.md  (+341 more)
(+1100 files in other folders)
