[project]
name = "xauusd-phase0"
version = "0.1.0"
description = "Phase 0 statistical validation package for XAUUSD Master EA"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "tqdm>=4.65",
    "python-dateutil>=2.8",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
phase0 = "phase0.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
